--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Anywhere Arc - Make something wonderful</title>
     <meta name="description" content="Anywhere Arc is an indenpendent software company. We build digital tools that last centuries.">
-    <link rel="icon" type="image/x-icon" href="/src/img/favicon.ico">
+    <link rel="icon" type="image/x-icon" href="/src/img/anywherearc-logo.png">
     <link rel="stylesheet" href="/src/css/dist.css">
 </head>
 <body data-page="home">
