--- a/index.html
+++ b/index.html
@@ -4,13 +4,10 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Anywhere Arc - Make something wonderful</title>
-<<<<<<< HEAD
-    <meta name="description" content="Anywhere Arc is an indenpendent software company. We build digital tools that last centuries.">
-    <link rel="icon" type="image/x-icon" href="/src/img/anywherearc-logo.svg">
-=======
     <meta name="description" content="Anywhere Arc is an indenpendent software company. We make wonderful digital tools.">
-    <link rel="icon" type="image/x-icon" href="/src/img/favicon.ico">
->>>>>>> b786973 (added legal pages)
+    <link rel="apple-touch-icon" sizes="180x180" href="/src/img/apple-touch-icon.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="/src/img/favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="/src/img/favicon-16x16.png">
     <link rel="stylesheet" href="/src/css/dist.css">
 </head>
 <body data-page="home">
