--- a/legal/subcontractors/index.html
+++ b/legal/subcontractors/index.html
@@ -39,5 +39,6 @@
         </div>
     </div>
 </body>
+<script defer data-domain="anywherearc.com" src="https://plausible.anywherearc.com/js/script.js"></script>
 <script src="/src/js/main.js"></script>
 </html>
