--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
     <link rel="icon" type="image/png" sizes="32x32" href="/src/img/favicon-32x32.png">
     <link rel="icon" type="image/png" sizes="16x16" href="/src/img/favicon-16x16.png">
     <link rel="stylesheet" href="/src/css/dist.css">
+    <link rel="canonical" href="https://www.anywherearc.com/">
 </head>
 <body data-page="home">
     <div id="head">
@@ -25,11 +26,20 @@
         <div id="worklist">
             <div id="slippod" class="workitem">
                 <div class="appicon">
-                    <a href="https://www.slippod.com"><img src="/src/img/slippod-appicon-white.png" alt="Slippod App Icon"></a>
+                    <a href="https://slippod.com/"><img src="/src/img/slippod-appicon-white.png" alt="Slippod App Icon"></a>
                 </div>
                 <div class="apphead">
-                    <div class="appname"><a href="https://www.slippod.com">Slippod</a></div>
-                    <div class="apptagline"><a href="https://www.slippod.com">Write notes that surprise you</a></div>
+                    <div class="appname"><a href="https://slippod.com/">Slippod</a></div>
+                    <div class="apptagline"><a href="https://slippod.com/">Write notes that surprise you</a></div>
+                </div>
+            </div>
+            <div id="textpixie" class="workitem">
+                <div class="appicon">
+                    <a href="https://textpixie.com/"><img src="/src/img/textpixie-appicon-white.png" alt="TextPixie App Icon"></a>
+                </div>
+                <div class="apphead">
+                    <div class="appname"><a href="https://textpixie.com/">TextPixie</a></div>
+                    <div class="apptagline"><a href="https://textpixie.com/">Free AI Translator Online</a></div>
                 </div>
             </div>
         </div>
